tests/valid/io/v25_write.f
program writetest
  integer x
  x = 42
  write *, x
end
