tests/invalid/variables/i03_undeclared_rhs.f
program undeclrhs
  integer x
  x = z + 1
  print *, x
end
